# Cascade

./: .gitignore  Abstract.tex  Although_these_changes_are_visually__.tex  Introduction.tex  MRI_scans_of_119_subjects__.tex  Materials_and_Methods.tex  OtherMethods.tex  Preprocessing.tex  README.md  Recently_we_have_developed_a__.tex  SetupCascade.sh  Soheil_Damangir_textsuperscript_1_Eric__.tex  Subjects.tex  The_aim_of_this_study__.tex  The_method_was_tested_given__.tex  WMC definition.tex  White_matter_changes_WMC_are__.tex  abstract.tex  abstract_Hello_this_is_abstract__.tex  abstract__.tex  authors.tex  begin_table_begin_tabular_c__.tex  begin_table_centering_begin_tabular__.tex  copyright.txt  header.tex  layout.md  license.txt  section_Introduction_White_matter_changes__.tex  section_Introduction_label_intro_White__.tex  section_Materials_and_Methods_label__.tex  section_Method__.tex  subsection_Image_processing__.tex  subsection_Image_processing_subsubsection_WMC__.tex  subsection_Subjects_MRI_scans_of__.tex  subsection_Subjects__.tex  subsection_WMC_definition_The_common__.tex  subsection_WMC_definition_label_definition__.tex  subsubsection_Calculating_Evident_Normal_Brain__.tex  subsubsection_Modeling_Normal_Brain_Expected__.tex  subsubsection_Preprocessing_The_output_of__.tex  (+3 more)
bibliography/: biblio.bib
common/: modelfree.freesurfer.p1.sh  modelfree.freesurfer.sh  modelfree.volbrain.sh  report.sh
data/map/: FS_label.map.txt
data/test/: flair2t1.tfm
src/: CMakeLists.txt  CleanMap.cxx  CollapseModel.cxx  ComposeToVector.cxx  CorrectGrayMatterFalsePositive.cxx  DICOMReader.cxx  EvidentNormal.cxx  ImportImage.cxx  KNN.cxx  LabelImageOpening.cxx  Labeler.cxx  OneSampleKolmogorovSmirnovTest.cxx  OneSampleRingKolmogorovSmirnovTest.cxx  Overlay.cxx  ReportFeature.cxx  ReportMap.cxx  Shark.cxx  StatisticTest.cxx  TTS.cxx  TissueTypeSegmentation.cxx  TwoSampleKolmogorovSmirnovTest.cxx  atlas.cxx  brainExtraction.cxx  combine.cxx  confusion.cxx  extractCSF.cxx  imageHelpers.h  inhomogeneity.cxx  itkAPTest.h  itkAffineTransformCalculator.h  itkAffineTransformCalculator.hxx  itkEmpiricalDensityMembershipFunction.h  itkEmpiricalDensityMembershipFunction.hxx  itkGibbsMarkovEnergyImageFilter.h  itkGibbsMarkovEnergyImageFilter.hxx  itkImageToWeightedHistogramFilter.h  itkImageToWeightedHistogramFilter.hxx  itkImageUtil.h  itkImageUtil.hxx  itkIterativeBayesianImageFilter.h  (+49 more)
src/Shell/: cascade.config.sh  cascade.core.define.sh  cascade.core.evident.sh  cascade.core.modelfree.sh  cascade.core.preparetrain.sh  cascade.core.register.cascade.sh  cascade.database.modelfree.sh  cascade.extra.bts.sh  cascade.extra.stdregister.sh  cascade.import.freesurfer.sh  cascade.import.volbrain.sh  cascade.pipeline.modelfree.bts.sh  cascade.pipeline.modelfree.freesurfer.sh  cascade.pipeline.modelfree.sh  cascade.pipeline.modelfree.volbrain.sh  cascade.pipeline.pre.sh  cascade.pre.coregister.sh  cascade.pre.normalize.sh  cascade.pre.refinebts.sh  help.md
src/python/: Cascade.py  CascadeDataset.py  CascadeTTS.py  CascadeTrain.py  test.py
src/python/cascade/: __init__.py  binary_proxy.py  config.py  logic.py  util.py
src/python/ruffus/: file_name_parameters.py  ruffus_utility.py
src/python/util/: checkpython.py  terminalsize.py
